# talos

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  LICENSING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md
.claude/skills/talos-design/: .thumbnail  AgentBadge.dc.html  AuthModeBadge.dc.html  README.md  RiskBadge.dc.html  SKILL.md  StatusBadge.dc.html  Talos.dc.html  styles.css  talos-data.js
.claude/skills/talos-design/components/badges/: AgentBadge.d.ts  AgentBadge.jsx  AgentBadge.prompt.md  AuthModeBadge.d.ts  AuthModeBadge.jsx  AuthModeBadge.prompt.md  RiskBadge.d.ts  RiskBadge.jsx  RiskBadge.prompt.md  StatusBadge.d.ts  StatusBadge.jsx  StatusBadge.prompt.md  badges.card.html
.claude/skills/talos-design/guidelines/: brand-logo.html  brand-radii.html  colors-accent.html  colors-semantic.html  colors-surfaces.html  elevation-shadows.html  elevation-surfaces.html  motion-fade.html  motion-pulse.html  spacing-density.html  spacing-scale.html  type-body.html  type-display.html  type-mono.html
.claude/skills/talos-design/tokens/: base.css  colors.css  motion.css  radii.css  shadows.css  spacing.css  typography.css
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  build.gradle.kts  pom.xml  settings.gradle.kts
apps/orchestrator/: .env.example  Dockerfile  pyproject.toml
apps/orchestrator/src/talos_orchestrator/: __init__.py  adapters.py  api_client.py  config.py  locks.py  log_batcher.py  main.py  pipeline.py  prompt_assembler.py  retention.py  runner_client.py
apps/orchestrator/tests/: fakes.py  test_log_batcher.py  test_main_idempotency.py  test_main_prefetch.py  test_package.py  test_pipeline.py  test_prompt_assembler.py  test_retention.py
apps/runner-supervisor/: .env.example  Dockerfile  pyproject.toml
apps/runner-supervisor/src/talos_runner_supervisor/: __init__.py  app.py  artifact_client.py  config.py  diff_capture.py  execute.py  git_push.py  models.py  process_utils.py  run_registry.py  test_command.py  workspace.py
apps/runner-supervisor/tests/: conftest.py  test_app.py  test_artifact_client.py  test_diff_capture.py  test_execute.py  test_git_push.py  test_package.py  test_test_command.py  test_workspace.py
apps/telegram-adapter/: .env.example  Dockerfile  README.md  pyproject.toml
apps/telegram-adapter/src/talos_telegram_adapter/: __init__.py  api_client.py  commands.py  config.py  handlers.py  main.py  notifier.py  telegram_client.py
apps/telegram-adapter/tests/: fakes.py  test_commands.py  test_config.py  test_handlers.py  test_main_polling.py  test_notifier.py
apps/web/: .env.example  Dockerfile  README.md  angular.json  docker-entrypoint.sh  nginx.conf  openapi-generator-config.json  package-lock.json  package.json
apps/web/src/: index.html  main.ts  styles.scss
apps/web/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
apps/web/src/styles/: forms.css  layout.css
apps/whatsapp-adapter/: .env.example  Dockerfile  README.md  pyproject.toml
apps/whatsapp-adapter/src/talos_whatsapp_adapter/: __init__.py  api_client.py  app.py  commands.py  config.py  handlers.py  notifier.py  webhook_processing.py  whatsapp_client.py
apps/whatsapp-adapter/tests/: fakes.py  test_app.py  test_commands.py  test_config.py  test_handlers.py  test_notifier.py  test_webhook_processing.py  test_whatsapp_client.py
docs/: README.md  agent-run-lifecycle.md  architecture.md  deployment.md  initial_implementation_log.md  initial_review.md  ops-runbook.md  provider-auth.md  security-model.md  talos_claude_code_execution_prompt.md
docs/phase-reports/: phase-0-report.md  phase-1-report.md  phase-10-report.md  phase-11-report.md  phase-12-report.md  phase-13-report.md  phase-14-report.md  phase-15-report.md  phase-16-report.md  phase-2-report.md  phase-3-report.md  phase-4-report.md  phase-5-report.md  phase-6-report.md  phase-7-report.md  phase-8-report.md  phase-9-report.md
docs/src/: build-pdf.sh  talos-implementation-plan.md
infra/: docker-compose.dev.yml
infra/dokploy/: README.md  docker-compose.prod.yml  pg-backup.sh
scripts/: check-licenses.sh  phase12-adapter-smoke.sh  phase7-live-smoke.sh  smoke.sh
workers/base-agent-runner/: Dockerfile  README.md
workers/java-runner/: Dockerfile  README.md
workers/node-runner/: Dockerfile  README.md
workers/python-runner/: Dockerfile  README.md
(+549 files in other folders)
