[project]
name = "talos-telegram-adapter"
version = "0.1.0"
description = "Talos Telegram trigger: chat-based task intake and run/approval notifications (Section 16 Phase 12 Track B)."
readme = "README.md"
authors = [
    { name = "Paul Bernard", email = "paulvbernard73@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=10.0.1",
    "httpx>=0.28.1",
    "redis>=6.2.0",
]

[project.scripts]
talos-telegram-adapter = "talos_telegram_adapter:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "jsonschema>=4.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
